# receipt-transcription-sim

./: .flake8  .gitignore  README.md  output.json  pyproject.toml
config/: default.yaml
config/scenarios/: baseline.yaml  high_failure.yaml  test_small.yaml
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  FileUpload.jsx  SummaryCards.jsx
frontend/src/components/charts/: ApprovalRateChart.jsx  ArrivalsChart.jsx  CorrectionRateChart.jsx  FailureRateChart.jsx  ResponseTimeChart.jsx  TokensChart.jsx
src/receipt_sim/: __init__.py  cli.py  config.py  engine.py  events.py  incentives.py  logger.py  models.py  population.py  retailers.py  service.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_events.py  test_incentives.py  test_integration.py  test_logger.py  test_models.py  test_population.py  test_retailers.py  test_service.py
