[project]
name = "receipt-transcription-sim"
version = "1.0.0"
description = "Discrete-event simulation of a receipt transcription service"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "tqdm>=4.64",
]

[project.scripts]
receipt-sim = "receipt_sim.cli:main"

[tool.mypy]
packages = ["receipt_sim"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scipy>=1.10",
    "mypy>=1.0",
    "flake8>=7.0",
    "black>=24.0",
    "types-pyyaml>=6.0.12.20250915",
    "pandas-stubs>=3.0.0.260204",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receipt_sim"]
